--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.3
 aiosignal==1.2.0
 async-timeout==4.0.2
 attrs==22.1.0
+certifi==2022.9.24
 charset-normalizer==2.1.1
 frozenlist==1.3.1
 idna==3.4
@@ -9,6 +10,8 @@ multidict==6.0.2
 psutil==5.9.2
 PySide6==6.2.4
 pywin32==304
+requests==2.28.1
 shiboken6==6.2.4
+urllib3==1.26.12
 willump==1.2.6
 yarl==1.8.1
