--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.8.3
 aiosignal==1.2.0
 async-timeout==4.0.2
 attrs==22.1.0
+beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 frozenlist==1.3.1
@@ -12,6 +13,7 @@ PySide6==6.2.4
 pywin32==304
 requests==2.28.1
 shiboken6==6.2.4
+soupsieve==2.3.2.post1
 urllib3==1.26.12
 willump==1.2.6
 yarl==1.8.1
