--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 aiohttp==3.8.3
 aiosignal==1.2.0
+altgraph==0.17.3
 async-timeout==4.0.2
 attrs==22.1.0
 beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 frozenlist==1.3.1
+future==0.18.2
 idna==3.4
 multidict==6.0.2
+pefile==2022.5.30
 psutil==5.9.2
+pyinstaller==5.4.1
+pyinstaller-hooks-contrib==2022.10
 PySide6==6.2.4
 pywin32==304
+pywin32-ctypes==0.2.0
 requests==2.28.1
 shiboken6==6.2.4
 soupsieve==2.3.2.post1
