--- a/requirements.txt
+++ b/requirements.txt
@@ -6,20 +6,28 @@ attrs==22.1.0
 beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+colorama==0.4.5
 frozenlist==1.3.1
 future==0.18.2
 idna==3.4
+iniconfig==1.1.1
 multidict==6.0.2
+packaging==21.3
 pefile==2022.5.30
+pluggy==1.0.0
 psutil==5.9.2
+py==1.11.0
 pyinstaller==5.4.1
 pyinstaller-hooks-contrib==2022.10
+pyparsing==3.0.9
 PySide6==6.2.4
+pytest==7.1.3
 pywin32==304
 pywin32-ctypes==0.2.0
 requests==2.28.1
 shiboken6==6.2.4
 soupsieve==2.3.2.post1
+tomli==2.0.1
 urllib3==1.26.12
 willump==1.2.6
 yarl==1.8.1
