--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.11.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 colorama==0.4.5
+dependency-injector==4.40.0
 frozenlist==1.3.1
 future==0.18.2
 idna==3.4
@@ -26,6 +27,7 @@ pywin32==304
 pywin32-ctypes==0.2.0
 requests==2.28.1
 shiboken6==6.2.4
+six==1.16.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
 urllib3==1.26.12
