--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ frozenlist==1.3.1
 future==0.18.2
 idna==3.4
 iniconfig==1.1.1
+lupa==1.14.1
 multidict==6.0.2
 packaging==21.3
 pefile==2022.5.30
@@ -31,5 +32,6 @@ six==1.16.0
 soupsieve==2.3.2.post1
 tomli==2.0.1
 urllib3==1.26.12
+watchdog==2.1.9
 willump==1.2.6
 yarl==1.8.1
