--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ py==1.11.0
 pyinstaller==5.4.1
 pyinstaller-hooks-contrib==2022.10
 pyparsing==3.0.9
+pyqtdarktheme==1.2.1
 PySide6==6.2.4
 pytest==7.1.3
 pywin32==304
