--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ frozenlist==1.3.1
 future==0.18.2
 idna==3.4
 iniconfig==1.1.1
+lcu-driver==3.0.0a1
 lupa==1.14.1
 multidict==6.0.2
 packaging==21.3
